<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_EnOcean" Id="{1fd6828c-aab1-44c8-be37-8b5924417615}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stKL6581Input  AT %I* : KL6581_Input;
    stKL6581Output AT %Q* : KL6581_Output;
    stKL6581              : STR_KL6581;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>